--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <body>
     
   <h1>I suppose this is a heading.</h1>
-  <p> And this part's a paragraph.</p>
+  <p> And this part's a paragraph. Joshua Sekyere, Computer Science</p>
     
  </body>
  <html>
